# zahul-ai

./: .dockerignore  .env.example  .gitignore  CHANGES.md  Caddyfile  Dockerfile  PLEDGE.md  README.md  TODO.md  bot_run.py  deploy.sh  docker-compose.yml  import_chars.py  index_old.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start.bat  start.sh  start_bot.sh  tailwind.config.js
.github/workflows/: docker-publish.yml
api/: auth.py  bot_state.py  constants.py  discord_panel_dm_queue.py  simulate_access.py  url_safety.py  version_info.py
api/db/: cache.py  database.py  trash.py
api/models/: models.py
api/routers/: characters.py  config.py  discord.py  logs.py  plugins.py  preset.py  servers.py  simulate.py  stats.py  tasks.py  trash.py  users.py
data/: token_usage.txt
docs/: 00-guide.md  01-getting-started.md  02-ai-config.md  02-panel-security.md  03-characters.md  03-discord-oauth.md  04-characters.md  04-servers.md  05-ai-config.md  05-scheduler.md  06-plugins.md  06-slash-commands.md  07-multimodal.md  07-panel-security.md  08-discord-oauth.md  08-scheduler.md  09-users-and-roles.md  09-users.md  10-panel-tools.md  11-multi-model.md  11-multimodal.md  12-plugins.md  13-theme.md  README.md  WEBHOOK_DEPLOY.md  test-data.py
src/: tool_actions.py
static/: ai-config.html  characters.html  editor.html  index.html  login.html  logs.html  navbar.html  navbar.js  no-access.html  scheduler.html  servers.html  stats.html  swagger-dark.css  test.html  users.html
webhook/: deploy.sh  webhook.py  webhook.service
(+61 files in other folders)
