[project]
name = "zahul-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.6.0",
    "discord-py>=2.5.2",
    "duckduckgo-search==7.1.0",
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "openai>=1.76.2",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "protobuf==5.29.1",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.1",
    "python-multipart>=0.0.21",
    "uvicorn>=0.34.2",
    "youtube-transcript-api>=1.0.3",
]
